[build-system]
requires = ["setuptools>=64", "wheel", "tomli; python_version < '3.11'"]
build-backend = "setuptools.build_meta"

[project]
name = "alibabacloud-ros-iact3"
description = "Iact3 is a tool that tests Terraform and ROS(Resource Orchestration Service) templates."
readme = "README.md"
authors = [
    { name = "AlibabaCloud", email = "aliyun-developers-efficiency@list.alibaba-inc.com" },
]
keywords = ["alibabacloud", "aliyun", "ros", "iact3", "terraform", "template"]
license = "Apache-2.0"
requires-python = ">=3.8,<3.11"
dynamic = ["version"]
dependencies = [
    "aiofiles==22.1.0",
    "aiohttp>=3.10.2",
    "aiosignal==1.2.0",
    "alibabacloud-credentials==0.3.0",
    "alibabacloud-darabonba-array==0.1.0",
    "alibabacloud-darabonba-encode-util==0.0.1",
    "alibabacloud-darabonba-map==0.0.1",
    "alibabacloud-darabonba-signature-util==0.0.3",
    "alibabacloud-darabonba-string==0.0.4",
    "alibabacloud-ecs20140526==3.0.1",
    "alibabacloud-endpoint-util==0.0.3",
    "alibabacloud-gateway-spi==0.0.1",
    "alibabacloud-openapi-util==0.2.0",
    "alibabacloud-ros20190910==3.2.16",
    "alibabacloud-tea==0.3.0",
    "alibabacloud-tea-openapi==0.3.6",
    "alibabacloud-tea-util==0.3.8",
    "alibabacloud-tea-xml==0.0.2",
    "alibabacloud-vpc20160428==2.0.12",
    "aliyun-python-sdk-core==2.13.36",
    "aliyun-python-sdk-kms==2.16.0",
    "async-timeout==4.0.2",
    "asynctest==0.13.0",
    "attrs>=22.1.0",
    "backports.shutil-get-terminal-size==1.0.0",
    "certifi>=2023.7.22",
    "charset-normalizer==2.1.1",
    "colorama==0.4.6",
    "crcmod==1.7",
    "cryptography>=42.0.4",
    "dataclasses-jsonschema==2.16.0",
    "debtcollector==2.5.0",
    "decorator==5.1.1",
    "dulwich==0.20.50",
    "exceptiongroup==1.0.4",
    "frozenlist==1.3.1",
    "idna==3.7",
    "iniconfig==1.1.1",
    "iso8601==1.1.0",
    "jmespath==0.10.0",
    "jsonschema==4.17.0",
    "multidict==6.0.2",
    "netaddr==0.8.0",
    "netifaces==0.11.0",
    "oslo.i18n==5.1.0",
    "oslo.utils==6.0.1",
    "oss2==2.16.0",
    "packaging>=21.3",
    "pbr==7.0.3",
    "pluggy==1.0.0",
    "pycparser==2.21",
    "pycryptodome==3.19.1",
    "pyparsing==3.0.9",
    "pyrsistent==0.19.2",
    "python-dateutil==2.8.2",
    "pytz==2022.6",
    "PyYAML==6.0",
    "reprint==0.6.0",
    "requests==2.32.0",
    "retrying==1.3.4",
    "six==1.16.0",
    "tabulate==0.9.0",
    "tomli==2.0.1",
    "urllib3>=1.26.18",
    "wrapt==1.14.1",
    "yarl==1.8.1",
    "yattag==1.14.0",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Testing",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
]

[project.urls]
Homepage = "https://github.com/aliyun/alibabacloud-ros-tool-iact3"

[project.scripts]
iact3 = "iact3.__main__:sync_run"

[project.optional-dependencies]
binary = [
    "pyinstaller==6.11.1",
]
dev = [
    "pytest==7.2.0",
    "pytest-asyncio==0.20.3",
    "ruff",
    "ty",
]

[tool.setuptools.dynamic]
version = { attr = "iact3.__version__" }

[tool.setuptools.packages.find]
exclude = ["tests*", "build*", "dist*"]
namespaces = false

[tool.pytest.ini_options]
filterwarnings = [
    "error::DeprecationWarning",
    "error::pytest.PytestCollectionWarning",
    "ignore:invalid escape sequence.*:DeprecationWarning",
]

[tool.ruff]
target-version = "py38"
line-length = 120
extend-exclude = ["build", "dist", "docs", "iact3_outputs", "website"]

[tool.ruff.lint]
ignore = ["E401", "E721", "F401", "F403", "F405", "F541"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "preserve"

[tool.ty.src]
exclude = ["tests", "build", "dist", "docs", "hooks", "iact3_outputs", "website", "setup.py", "build.py"]

[tool.ty.rules]
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
invalid-parameter-default = "ignore"
invalid-type-form = "ignore"
no-matching-overload = "ignore"
not-iterable = "ignore"
not-subscriptable = "ignore"
unsupported-operator = "ignore"
unresolved-attribute = "ignore"
