[build-system]
requires = ["setuptools>=64", "wheel", "tomli; python_version < '3.11'"]
build-backend = "setuptools.build_meta"

[project]
name = "alibabacloud-ros-iact3"
description = "Iact3 is a tool that tests Terraform and ROS(Resource Orchestration Service) templates."
readme = "README.md"
authors = [
    { name = "AlibabaCloud", email = "aliyun-developers-efficiency@list.alibaba-inc.com" },
]
keywords = ["alibabacloud", "aliyun", "ros", "iact3", "terraform", "template"]
license = { text = "Apache-2.0" }
requires-python = ">=3.7,<3.15"
dynamic = ["version"]
dependencies = [
    "aiofiles==22.1.0",
    "aiohttp>=3.8.6,<3.9; python_version < '3.8'",
    "aiohttp>=3.10.2,<3.11; python_version >= '3.8' and python_version < '3.10'",
    "aiohttp>=3.14.1; python_version >= '3.10'",
    "alibabacloud-credentials==0.3.0",
    "alibabacloud-darabonba-array==0.1.0",
    "alibabacloud-darabonba-encode-util==0.0.1",
    "alibabacloud-darabonba-map==0.0.1",
    "alibabacloud-darabonba-signature-util==0.0.3",
    "alibabacloud-darabonba-string==0.0.4",
    "alibabacloud-ecs20140526==3.0.1",
    "alibabacloud-endpoint-util==0.0.3",
    "alibabacloud-gateway-spi==0.0.1",
    "alibabacloud-openapi-util==0.2.0",
    "alibabacloud-ros20190910==3.2.16",
    "alibabacloud-tea==0.3.0",
    "alibabacloud-tea-openapi==0.3.6",
    "alibabacloud-tea-util==0.3.8",
    "alibabacloud-tea-xml==0.0.2",
    "alibabacloud-vpc20160428==2.0.12",
    "aliyun-python-sdk-core==2.16.0",
    "aliyun-python-sdk-kms==2.16.0",
    "asynctest==0.13.0",
    "backports.shutil-get-terminal-size==1.0.0",
    "certifi>=2023.7.22",
    "charset-normalizer==2.1.1",
    "colorama==0.4.6",
    "crcmod==1.7",
    "cryptography>=42.0.4",
    "dataclasses-jsonschema==2.16.0",
    "decorator==5.1.1",
    "dulwich==0.20.50",
    "exceptiongroup==1.0.4",
    "frozenlist>=1.8.0; python_version >= '3.10'",
    "idna==3.7",
    "importlib-metadata==6.7.0; python_version < '3.8'",
    "jmespath==0.10.0",
    "jsonschema==4.17.0; python_version < '3.8'",
    "jsonschema>=4.23,<4.24; python_version >= '3.8' and python_version < '3.9'",
    "jsonschema>=4.25.1,<4.26; python_version >= '3.9' and python_version < '3.10'",
    "jsonschema>=4.26.0; python_version >= '3.10'",
    "multidict>=6.7.1; python_version >= '3.10'",
    "oss2==2.16.0",
    "pycparser==2.21",
    "pycryptodome>=3.19.1",
    "python-dateutil>=2.9.0.post0",
    "PyYAML==6.0.1; python_version < '3.8'",
    "PyYAML>=6.0.3; python_version >= '3.8'",
    "reprint==0.6.0",
    "requests==2.31.0; python_version < '3.8'",
    "requests==2.32.4; python_version >= '3.8'",
    "retrying==1.3.4",
    "six==1.16.0",
    "tabulate==0.9.0",
    "tomli==2.0.1",
    "urllib3>=1.26.18",
    "yattag==1.14.0",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Testing",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
]

[project.urls]
Homepage = "https://github.com/aliyun/alibabacloud-ros-tool-iact3"

[project.scripts]
iact3 = "iact3.__main__:sync_run"

[project.optional-dependencies]
binary = [
    "pyinstaller==6.21.0; python_version >= '3.8'",
]
dev = [
    "pytest==7.4.4; python_version < '3.8'",
    "pytest>=8.3.5,<8.4; python_version >= '3.8' and python_version < '3.10'",
    "pytest>=9.1.1; python_version >= '3.10'",
    "pytest-asyncio==0.21.2; python_version < '3.8'",
    "pytest-asyncio==0.24.0; python_version >= '3.8' and python_version < '3.9'",
    "pytest-asyncio>=1.2.0; python_version >= '3.9' and python_version < '3.10'",
    "pytest-asyncio>=1.4.0; python_version >= '3.10'",
    "ruff",
    "ty; python_version >= '3.8'",
]

[tool.setuptools.dynamic]
version = { attr = "iact3.__version__" }

[tool.setuptools.packages.find]
exclude = ["tests*", "build*", "dist*"]
namespaces = false

[tool.pytest.ini_options]
filterwarnings = [
    "error::DeprecationWarning",
    "error::pytest.PytestCollectionWarning",
    "ignore:invalid escape sequence.*:DeprecationWarning",
]

[tool.ruff]
target-version = "py38"
line-length = 120
extend-exclude = ["build", "dist", "docs", "iact3_outputs", "website"]

[tool.ruff.lint]
ignore = ["E401", "E721", "F401", "F403", "F405", "F541"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "preserve"

[tool.ty.src]
exclude = ["tests", "build", "dist", "docs", "hooks", "iact3_outputs", "website", "setup.py", "build.py"]

[tool.ty.rules]
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
invalid-parameter-default = "ignore"
invalid-type-form = "ignore"
no-matching-overload = "ignore"
not-iterable = "ignore"
not-subscriptable = "ignore"
unsupported-operator = "ignore"
unresolved-attribute = "ignore"
